--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React SCSS TSX App</title>
+
+    <!-- NEW TITLE -->
+    <title>Ruffian</title>
+
+    <!-- FAVICON (update the path if using your own logo) -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/team_rocket.png" />
+    <link rel="shortcut icon" href="/assets/team_rocket.png" />
+    <!-- SEO META (optional but professional) -->
+    <meta name="description" content="Engineering and Consulting on Product Development and Process Optimization" />
+    <meta name="author" content="Charlie Neuenschwander" />
   </head>
   <body>
     <div id="root"></div>
-    <!-- load your index.tsx entrypoint, not App.tsx -->
+
+    <!-- Load entrypoint -->
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
